22. Instrumented tests - mockWebServer

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,15 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    testBuildType 'instrumented'
     buildTypes {
+        debug {
+            applicationIdSuffix '.debug'
+        }
+        instrumented  {
+            initWith debug
+            applicationIdSuffix '.instrumented'
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -63,6 +71,9 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.mockito.kotlin:mockito-kotlin:5.1.0'
     testImplementation 'androidx.arch.core:core-testing:2.2.0'
+
+    androidTestImplementation("com.squareup.okhttp3:mockwebserver:4.11.0")
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test:rules:1.5.0'
 }
